# lab_3

./: CMakeLists.txt  job.sh
benchmark/: benchmark.cpp
source/: CMakeLists.txt  authors.h  gpu_LIN_upscaling.cu  gpu_NN_upscaling.cu  gpu_downsampling.cu  gpu_image_operations.cu  gpu_image_operations.h  gpu_matrix_convolution.cu  gpu_memory_management.cu  gpu_reductions.cu  grayscale_image.cpp  intermediate_image.cu  main.cpp
source/image/: bitmap_image.h
source/io/: image_parser.cpp  image_parser.h
test/: CMakeLists.txt  lab_3_dev_cpu_grayscale.cpp  lab_3_dev_gpu_NN_upscaling.cpp  lab_3_dev_gpu_convolution.cu  lab_3_dev_gpu_reduction.cpp  lab_3_dev_gpu_up_and_download.cpp  test.h
test_compilation/: CMakeLists.txt
